fix anchor link overflow problem

--- a/src/assets/stylesheets/extra.css
+++ b/src/assets/stylesheets/extra.css
@@ -38,6 +38,14 @@
 .md-header__button.md-logo svg {
   height: 2.6rem;
 }
+// To make anchor links work with the increased logo size
+[id]::before {
+  content: "";
+  display: block;
+  height: 30px;
+  margin-top: -30px;
+  visibility: hidden;
+}
 /* Increase the logo size */
 
 /* Blog title image settings */
